--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,36 +13,33 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Java
+      - name: Set up Java 21
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: 21
 
       - name: Build with Maven
-        run: ./mvnw clean package -DskipTests
+        run: mvn clean package -DskipTests
 
-      - name: Install expect
-        run: sudo apt-get update && sudo apt-get install -y expect
+      - name: Upload jar to server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SSH_IP }}
+          username: ${{ secrets.SSH_ID }}
+          password: ${{ secrets.REMOTE_PASS }}
+          port: ${{ secrets.SSH_PORT }}
+          source: "target/illuwa-0.0.1-SNAPSHOT.jar"
+          target: "~/deploy/eureka"
+          rm: false
 
-      - name: SCP jar to server
-        run: |
-          expect << EOF
-          spawn scp -P 8822 target/*.jar ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:${{ secrets.REMOTE_PATH }}/app.jar
-          expect "password:"
-          send "${{ secrets.REMOTE_PASS }}\r"
-          expect eof
-          EOF
-      
-      - name: SSH and restart app
-        run: |
-          expect << EOF
-          spawn ssh -p 8822 ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}
-          expect "password:"
-          send "${{ secrets.REMOTE_PASS }}\r"
-          expect "$ "
-          send "pkill -f 'java.*app.jar' || true\r"
-          send "nohup java -jar ${{ secrets.REMOTE_PATH }}/app.jar > ${{ secrets.REMOTE_PATH }}/app.log 2>&1 &\r"
-          send "exit\r"
-          expect eof
-          EOF
+      - name: Run startup script on server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SSH_IP }}
+          username: ${{ secrets.SSH_ID }}
+          password: ${{ secrets.REMOTE_PASS }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            chmod +x ~/deploy/eureka/startup.sh
+            ~/deploy/eureka/startup.sh
