--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,9 @@
     </dependencyManagement>
 
     <build>
+        <finalName>
+            eureka-service
+        </finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
