--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           username: ${{ secrets.SSH_ID }}
           password: ${{ secrets.REMOTE_PASS }}
           port: ${{ secrets.SSH_PORT }}
-          source: "target/illuwa-0.0.1-SNAPSHOT.jar"
+          source: "target/eureka-service.jar"
           target: "~/deploy/eureka"
           rm: false
 
