--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
 spring:
-  profiles:
-    active: dev
+  application:
+    name: eureka-server
+
+  config:
+    import: optional:configserver:http://localhost:8888/
