--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>1lluwa-eureka-server</finalName>
     </build>
 
 </project>
