--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,4 +2,4 @@ spring:
   application:
     name: eureka-server
   config:
-    import: optional:configserver:http://localhost:10319/
+    import: optional:configserver:https://book1lluwa.store/config/
